--- a/views/manage.html
+++ b/views/manage.html
@@ -13,36 +13,46 @@
             <ul class="nav-list">
                 <li class="nav-list-item"><a href="#" class="nav-list-item-link">profile</a></li>
                 <li class="nav-list-item"><a href="#" class="nav-list-item-link">change-password</li>
-                <li class="nav-list-item"><a href="#" class="nav-list-item-link">Logout</a></li>
+                <li class="nav-list-item"><a href="index.html" class="nav-list-item-link">Logout</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="main-link-container">
-            <a href="#" class="main-link"><span class="main-link-icon"><i class="fas fa-plus-circle"></i></span> Create an Event</a>
+            <a href="create.html" class="main-link"><span class="main-link-icon"><i class="fas fa-plus-circle"></i></span> Create an Event</a>
         </div>
     </main>
     <section>
         <div class="section-cards-wrapper">
             <div class="section-card">
-                <div class="section-card-header">Header</div>
+                <div class="section-card-header">The event information header is here to see the world</div>
                 <div class="section-card-participants">No of students participated: 44</div>
-                <div class="section-card-list">List of students: <a href="#">List</a></div>
+                <div class="section-card-list">List of students: <a href="#">click here</a></div>
+                <button class="section-card-delete-btn">Delete Event</button>
             </div>
             <div class="section-card">
                 <div class="section-card-header">Header</div>
                 <div class="section-card-participants">No of students participated: 44</div>
                 <div class="section-card-list">List of students: <a href="#">List</a></div>
+                <button class="section-card-delete-btn">Delete Event</button>
             </div>
             <div class="section-card">
                 <div class="section-card-header">Header</div>
                 <div class="section-card-participants">No of students participated: 44</div>
                 <div class="section-card-list">List of students: <a href="#">List</a></div>
+                <button class="section-card-delete-btn">Delete Event</button>
             </div>
             <div class="section-card">
                 <div class="section-card-header">Header</div>
                 <div class="section-card-participants">No of students participated: 44</div>
                 <div class="section-card-list">List of students: <a href="#">List</a></div>
+                <button class="section-card-delete-btn">Delete Event</button>
+            </div>
+            <div class="section-card">
+                <div class="section-card-header">Header</div>
+                <div class="section-card-participants">No of students participated: 44</div>
+                <div class="section-card-list">List of students: <a href="#">List</a></div>
+                <button class="section-card-delete-btn">Delete Event</button>
             </div>
         </div>
     </section>
