--- a/public/css/home.css
+++ b/public/css/home.css
@@ -116,12 +116,15 @@ a {
 
 .section-wrapper .section-card {
   width: 100%;
-  height: 80vh;
   background-color: #c70039;
   color: white;
   border-radius: 5%;
   -webkit-box-shadow: 2px 4px 0.7rem #2c2b2b;
           box-shadow: 2px 4px 0.7rem #2c2b2b;
+  -webkit-transition: -webkit-box-shadow 300ms;
+  transition: -webkit-box-shadow 300ms;
+  transition: box-shadow 300ms;
+  transition: box-shadow 300ms, -webkit-box-shadow 300ms;
 }
 
 .section-wrapper .section-card .section-card-image-wrapper {
@@ -186,6 +189,11 @@ a {
   margin-right: 1rem;
   background-color: #ffc300;
   font-weight: 700;
+}
+
+.section-wrapper .section-card:hover {
+  -webkit-box-shadow: 4px 8px 1rem #2c2b2b;
+          box-shadow: 4px 8px 1rem #2c2b2b;
 }
 
 footer {
