--- a/public/css/manage.css
+++ b/public/css/manage.css
@@ -84,9 +84,9 @@ main {
   background-color: #24292E;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  padding: 1rem;
+  -ms-grid-columns: 30% 30% 30%;
+      grid-template-columns: 30% 30% 30%;
+  padding: 2rem;
   grid-gap: 2rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -95,7 +95,6 @@ main {
 
 .section-cards-wrapper .section-card {
   width: 100%;
-  height: 100px;
   background-color: #3F4448;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -110,11 +109,43 @@ main {
   padding: 1rem;
   color: #fff;
   border: 1px solid #fff;
+  -webkit-transition: scale 350ms ease-in;
+  transition: scale 350ms ease-in;
 }
 
 .section-cards-wrapper .section-card .section-card-list a {
+  color: #59e24d;
+}
+
+.section-cards-wrapper .section-card .section-card-list a:hover {
+  color: green;
+}
+
+.section-cards-wrapper .section-card-header {
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding: .5rem 0;
+}
+
+.section-cards-wrapper .section-card-delete-btn {
+  border: none;
+  display: inline-block;
+  border: .5px solid white;
   color: white;
+  background-color: #c70039;
+  border-radius: 5px;
+  margin-top: 1rem;
+  padding: 5px;
   text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.section-cards-wrapper .section-card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media screen and (max-width: 600px) {
@@ -131,11 +162,8 @@ main {
 
 @media screen and (min-width: 600px) and (max-width: 992px) {
   .section-cards-wrapper {
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-  }
-  .section-cards-wrapper .section-card {
-    height: 150px;
+    -ms-grid-columns: 45% 45%;
+        grid-template-columns: 45% 45%;
   }
 }
 /*# sourceMappingURL=manage.css.map */
