--- a/public/sass/create/create.scss
+++ b/public/sass/create/create.scss
@@ -1,1 +1,103 @@
 @import "../resets";
+
+$shade1: #24292E;
+$shade2: #3F4448;
+
+.main-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $shade1;
+}
+input[type=text] {
+    border: 1px solid white;
+    border-radius: .4rem;
+}
+.main-form-wrapper {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $shade2;
+    padding: 2rem;
+    border: 2px solid #fff;
+    border-radius: 1.5rem;
+    color: white;
+    .event-header-container {
+        textarea, input {
+            width: 100%;
+        }
+        textarea {
+            height: 100px;
+            resize: none;
+            border: 1px solid white;
+            border-radius: .4rem;
+        }
+    }
+    .event-img-container {
+        padding: 1rem 0;
+        .event-img {
+            width: 100%;
+            border: 1px dotted white;
+            border-radius: 4px;
+        }
+    }
+    .event-date-container {
+        padding: .5rem 0;
+        display: flex;
+        justify-content: space-between;
+        input{
+            width: 80%;
+            border: 1px solid white;
+            border-radius: 5px;
+            color: $shade1;
+            font-weight: bold;
+            text-transform: uppercase;
+            padding-left: 4px;
+        }
+    }
+    .event-location-container {
+        padding: .5rem 0;
+        input {width: 100%;}
+    }
+    .event-select-options-container {
+        padding: .5rem 0;
+        display: flex;
+        justify-content: space-evenly;
+        select {
+            border: 1px solid white;
+            border-radius: .5rem;
+            color: $shade1;
+        }
+    }
+    .event-charge-container {
+        padding: .5rem 0;
+        display: flex;
+        justify-content: space-evenly;
+        input{
+            width: 80%;
+        }
+    }
+    .event-create-btn-container {
+        padding-top: 1rem;
+        text-align: center;
+        input {
+            border: 1px solid white;
+            background-color: transparent;
+            color: white;
+            padding: .7rem;
+            width: 50%;
+            transition-duration: 300ms;
+            text-transform: uppercase;
+        }
+        input:hover {
+            border: 1px solid $shade1;
+            color: $shade1;
+            background-color: white;
+            border-radius: .8rem;
+        }
+    }
+}
+
