--- a/public/sass/manage/manage.scss
+++ b/public/sass/manage/manage.scss
@@ -64,13 +64,12 @@ main {
 .section-cards-wrapper{
     background-color: $shade1;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 1rem;
+    grid-template-columns: 30% 30% 30%;
+    padding: 2rem;
     grid-gap: 2rem;
     justify-content: center;
     .section-card {
         width: 100%;
-        height: 100px;
         background-color: $shade2;
         display: flex;
         flex-direction: column;
@@ -78,10 +77,36 @@ main {
         padding: 1rem;
         color: #fff;
         border: 1px solid #fff;
+        transition: scale 350ms ease-in;
         .section-card-list a {
-            color: white;
-            text-transform: uppercase;
+            color: rgb(89, 226, 77);
         }
+        .section-card-list a:hover {
+            color: green;
+        }
+        &-header {
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            padding: .5rem 0;
+        }
+        &-delete-btn {
+            border: none;
+            display: inline-block;
+            border: .5px solid white;
+            color: white;
+            background-color: $primary_color;
+            border-radius: 5px;
+            margin-top: 1rem;
+            padding: 5px;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+    }
+    .section-card:hover {
+        transform: scale(1.1);
     }
 }
 
@@ -95,9 +120,6 @@ main {
 }
 @media screen and (min-width: $small-device) and (max-width: $medium-device) {
     .section-cards-wrapper {
-        grid-template-columns: 1fr 1fr;
-        .section-card {
-            height: 150px;
-        }
+        grid-template-columns: 45% 45%;
     }
 }
