--- a/views/index.html
+++ b/views/index.html
@@ -5,16 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RCOE Events</title>
-  <!-- local css links -->
   <link rel="stylesheet" href="/public/css/home.css" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <!-- cdn -->
-  <!-- <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    /> -->
 </head>
 
 <body>
@@ -36,10 +28,10 @@
           <a href="index.html" class="main-nav-link">Home</a>
         </li>
         <li class="main-nav-item">
-          <a href="login.html" class="main-nav-link">Log In</a>
+          <a href="login.html" class="main-nav-link">LogIn</a>
         </li>
         <li class="main-nav-item">
-          <a href="signup.html" class="main-nav-link">Sign Up</a>
+          <a href="signup.html" class="main-nav-link">SignUp</a>
         </li>
       </ul>
     </nav>
@@ -52,12 +44,12 @@
       </div>
       <div class="section-card-content-wrapper">
         <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
-        <div class="section-card-content-description"> Lorem ipsum Voluptate quaerat dolore aliquid rem sequi omnis
-          repellendus accusamus? Placeat asfhkla dfaksl fkjlashdf dsadhfs lsdfh sld quos aspernatur exercitation quae et
-          odit ea ad? heljlrsldf </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
         <div class="section-card-content-date">12 May</div>
         <div class="section-card-content-footer">
-          <div class="section-card-content-price">Free</div>
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
           <div class="section-card-content-apply">
             <a href="#" class="button">Apply</a>
           </div>
@@ -66,27 +58,9 @@
     </div>
   </section>
   <footer>
-    <div class="footer-container">
-      Made with <div class="footer-heart">❤</div> by FreakyHarsh
-    </div>
+    <div class="footer-container"> Made with <div class="footer-heart">❤</div> by FreakyHarsh </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-  </script>
-  <script>
-    // ----------------------Toggle Navigation using jQuery----------
-    // $(document).ready(function () {
-    //   $(".main-toggle").click(function () {
-    //     $(".main-form").toggleClass("active").slideToggle();
-    //     $(".main-nav-list").toggleClass("active").slideToggle();
-    //   });
-    // });
-    // ----------------------------------------------------------------
-    document.getElementById("main-toggle-icon-id").addEventListener("click", () => {
-      document.getElementById("main-form-id").classList.toggle("active");
-      document.getElementById("main-nav-list-id").classList.toggle("active");
-    });
-  </script>
+  <script src="../public/js/index.js"></script>
 </body>
 
 </html>
