added sample imgs

--- a/views/create.html
+++ b/views/create.html
@@ -9,7 +9,7 @@
 <body>
     <main class="main-container">
         <div class="main-form-wrapper">
-            <div action="#">
+            <form action="index.html">
                 <div class="event-header-container">
                     <label for="event-name">Event Name:</label>
                     <input type="text" name="event-name" id="event-name">
