--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,102 @@
   <section class="container section-wrapper">
     <div class="section-card">
       <div class="section-card-image-wrapper">
-        <img src="/public/images/796061-naruto-quotes-wallpapers-1920x1200-download-free.jpg" class="section-card-image"
+        <img src="/public/images/1.jpg" class="section-card-image"
+          alt="event cover image" />
+      </div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/2.png" class="section-card-image"
+          alt="event cover image" />
+      </div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/3.jpg" class="section-card-image"
+          alt="event cover image" />
+      </div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/4.jpg" class="section-card-image"
+          alt="event cover image" />
+      </div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/5.jpg" class="section-card-image"
+          alt="event cover image" />
+      </div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ex
+          repellendus. Possimus aliquam excepturi dolore, consequuntur dolor illum quibusdam facilis. Quod sit, eaque
+          nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/5.jpg" class="section-card-image"
           alt="event cover image" />
       </div>
       <div class="section-card-content-wrapper">
