--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RCOE Events</title>
-  <link rel="stylesheet" href="/public/css/home.css" />
+  <link rel="stylesheet" href="https://affectionate-boyd-5563b3.netlify.app/public/css/home.css" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 
