--- a/views/manage.html
+++ b/views/manage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/public/css/manage.css">
+    <link rel="stylesheet" href="../public/css/manage.css">
     <title>Create/Manage</title>
 </head>
 <body>
