ejs added to index file

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -197,6 +197,9 @@ a {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background-color: #24292E;
   color: white;
   display: -webkit-box;
