--- a/public/sass/home/home.scss
+++ b/public/sass/home/home.scss
@@ -145,6 +145,9 @@
   }
 }
 footer {
+  position:fixed; 
+  bottom: 0; 
+  width: 100%;
   background-color: $shade1;
   color: white;
   display: flex;
