--- a/views/create.html
+++ b/views/create.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%- include('includes/header') %>
     <link rel="stylesheet" href="../public/css/create.css">
     <title>Create Event</title>
 </head>
