--- a/public/sass/manage/manage.scss
+++ b/public/sass/manage/manage.scss
@@ -77,7 +77,7 @@ main {
         padding: 1rem;
         color: #fff;
         border: 1px solid #fff;
-        transition: scale 350ms ease-in;
+        transition: transform 350ms ease-in;
         .section-card-list a {
             color: rgb(89, 226, 77);
         }
