--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,11 +1,11 @@
 <%- include('includes/header') %>
-    <link rel="stylesheet" href="../public/css/create.css">
-    <title>Create Event</title>
+    <link rel="stylesheet" href="../css/create.css">
+    <title><%= pageTitle %></title>
 </head>
 <body>
     <main class="main-container">
         <div class="main-form-wrapper">
-            <form action="index.html">
+            <form action="/">
                 <div class="event-header-container">
                     <label for="event-name">Event Name:</label>
                     <input type="text" name="event-name" id="event-name">
@@ -45,6 +45,5 @@
             </form>
         </div>
     </main>
-    <script src="../public/js/create.js"></script>
-</body>
-</html>
+    <script src="../js/create.js"></script>
+<%- include('includes/footer') %>
