--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<% include('includes/header'); %>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../public/css/manage.css">
-    <title>Create/Manage</title>
+    <link rel="stylesheet" href="../css/manage.css">
+    <title><%= pageTitle %></title>
 </head>
 <body>
     <header>
@@ -13,13 +9,13 @@
             <ul class="nav-list">
                 <li class="nav-list-item"><a href="#" class="nav-list-item-link">profile</a></li>
                 <li class="nav-list-item"><a href="#" class="nav-list-item-link">change-password</li>
-                <li class="nav-list-item"><a href="index.html" class="nav-list-item-link">Logout</a></li>
+                <li class="nav-list-item"><a href="/" class="nav-list-item-link">Logout</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="main-link-container">
-            <a href="create.html" class="main-link"><span class="main-link-icon"><i class="fas fa-plus-circle"></i></span> Create an Event</a>
+            <a href="/create" class="main-link"><span class="main-link-icon"><i class="fas fa-plus-circle"></i></span> Create an Event</a>
         </div>
     </main>
     <section>
@@ -56,6 +52,4 @@
             </div>
         </div>
     </section>
-    
-</body>
-</html>
+<% include('includes/footer') %>
