creating login types

--- a/public/sass/home/_home.media.sm.scss
+++ b/public/sass/home/_home.media.sm.scss
@@ -51,8 +51,7 @@
     }
 
     .section-wrapper {
-        grid-template-columns: repeat(1, 80%);
-        grid-gap: 1rem;
+        grid-template-columns: 90%;
         padding: 1rem;
     }
 
