--- a/public/css/home.css
+++ b/public/css/home.css
@@ -98,6 +98,12 @@ a {
   text-decoration: none;
   color: white;
   font-weight: 500;
+  -webkit-transition: color 300ms ease;
+  transition: color 300ms ease;
+}
+
+.main .main-nav-link:hover {
+  color: yellow;
 }
 
 .section-wrapper {
@@ -116,6 +122,7 @@ a {
 
 .section-wrapper .section-card {
   width: 100%;
+  height: 400px;
   background-color: #c70039;
   color: white;
   border-radius: 5%;
@@ -135,6 +142,7 @@ a {
 }
 
 .section-wrapper .section-card .section-card-image {
+  padding: 0.5rem;
   width: 100%;
   height: 100%;
   display: block;
@@ -178,9 +186,8 @@ a {
 }
 
 .section-wrapper .section-card .button {
-  background-color: red;
   border: none;
-  border-radius: 1rem 1rem;
+  border-radius: .5rem;
   padding: .5em;
   font-size: 1rem;
   text-align: center;
@@ -188,7 +195,16 @@ a {
   text-transform: uppercase;
   margin-right: 1rem;
   background-color: #ffc300;
+  color: green;
   font-weight: 700;
+  -webkit-transition: background-color 300ms, color 400ms, border-radius 250ms;
+  transition: background-color 300ms, color 400ms, border-radius 250ms;
+}
+
+.section-wrapper .section-card .button:hover {
+  background-color: white;
+  color: red;
+  border-radius: 1rem;
 }
 
 .section-wrapper .section-card:hover {
@@ -197,7 +213,7 @@ a {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color: #24292E;
@@ -269,9 +285,8 @@ footer .footer-heart {
             animation-iteration-count: 1;
   }
   .section-wrapper {
-    -ms-grid-columns: (80%)[1];
-        grid-template-columns: repeat(1, 80%);
-    grid-gap: 1rem;
+    -ms-grid-columns: 90%;
+        grid-template-columns: 90%;
     padding: 1rem;
   }
 }
