--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,7 +5,7 @@
 <body>
     <main class="main-container">
         <div class="main-form-wrapper">
-            <form action="/">
+            <form action="/" method="POST">
                 <div class="event-header-container">
                     <label for="event-name">Event Name:</label>
                     <input type="text" name="event-name" id="event-name">
