--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,23 +36,19 @@
       </div>
       <div class="section-card-content-wrapper">
         <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
-        <div class="section-card-content-description" style="max-height: 150px; min-height: 100px"> Lorem ipsum dolor
-          sit amet consectetur adipisicing e lum quibusdam facilis. Quod sit, eaque Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. Rem impedit quam numquam, excepturi, et perspiciatis hic Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Cumque libero molestiae, illo itaque aspernatur porro ab voluptatibus
-          delectus accusamus nobis. Quidem similique blanditiis officiis nostrum sint quia quasi vel aliquid!
-          voluptatibus velit quo ipsa aspernatur illo aperiam repellendus quaerat sint molestiae minus? Expedita,
-          aliquam. nisi ullam laborum deserunt in quisquam possimus. </div>
+        <div class="section-card-content-description" style="max-height: 150px; min-height: 100px"> Lorem ipsumatibus Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, enim molestiae expedita deleniti est rem maxime eius dicta, alias inventore odit quam neque rerum excepturi, beatae cupiditate minima possimus nihil.
+          delectus accusamus nobis. Quideuisquam possimus. </div>
         <div class="section-card-content-date">12 May</div>
         <div class="section-card-content-footer">
           <div class="section-card-content-price"><span>Paid: </span>350Rs</div>
           <div class="section-card-content-apply">
+            <a href="#" class="button">Details</a>
             <a href="#" class="button">Apply</a>
           </div>
         </div>
       </div>
     </div> <% } %> </section>
   <footer>
-    <div class="footer-container"> Made with <div class="footer-heart">❤</div> by FreakyHarsh </div>
+    <div class="footer-container"> Made with <div class="footer-heart">❤</div> by HarshBoricha </div>
   </footer>
   <script src="../js/index.js"></script> <%- include('includes/footer') %>
