--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -8,7 +8,7 @@
     <a href="/" class="signup-back-link"><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a>
     <div class="signup-wrap">
         <h2>LogIn</h2>
-        <form action="manage">
+        <form action="manage" method="POST">
             <input type="email" name="email" placeholder="Email...">
             <input type="password" name="pwd" placeholder="Password...">
             <input type="submit" value="submit">
