--- a/views/login/author-login.ejs
+++ b/views/login/author-login.ejs
@@ -7,9 +7,9 @@
     <header>
         <nav class="navbar">
             <ul class="nav-list">
-                <!-- <li class="nav-list-item"><a href="#" class="nav-list-item-link">profile</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-list-item-link">change-password</li> -->
-                <li class="nav-list-item"><a href="/" class="nav-list-item-link">logout</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-list-item-link">Profile</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-list-item-link">change-password</li>
+                <li class="nav-list-item"><a href="/" class="nav-list-item-link">Logout</a></li>
             </ul>
         </nav>
     </header>
