--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Error</title>
+<% include('includes/header') %> <title><%= pageTitle %></title>
 </head>
+
 <body>
-    <h1>404 Error .....</h1>
-</body>
-</html>
+    <h1>404 Error .....</h1> <% include('inlcudes/footer') %>
