mongo server not working fix later

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,5 @@
 <% include('includes/header') %> <title><%= pageTitle %></title>
 </head>
-
 <body>
-    <h1>404 Error .....</h1> <% include('inlcudes/footer') %>
+    <h1>404 Error .....</h1>
+<% include('includes/footer') %>
