added create event backend

--- a/public/sass/home/home.scss
+++ b/public/sass/home/home.scss
@@ -118,11 +118,11 @@
       
       .section-card-content-description {
         font-weight: weight(regular);
-        text-overflow: ellipsis;
+        line-height: 1.35;
         overflow: hidden;
-        
       }
       .section-card-content-footer {
+        height: 1.5rem;
         display: flex;
         justify-content: space-between;
       }
@@ -154,7 +154,7 @@
   }
 }
 footer {
-  position: relative; 
+  position: absolute; 
   bottom: 0; 
   width: 100%;
   background-color: $shade1;
