--- a/views/login/login-type.ejs
+++ b/views/login/login-type.ejs
@@ -5,7 +5,7 @@
 <body>
     <main class="container">
         <header class="login-type-header-wrapper">
-            <h2>Welcome HarshBoricha</h2>
+            <h2>Welcome <%= user %></h2>
         </header>
         <section class="login-type-section-wrapper">
             <div class="login-type-guest">
