--- a/public/css/home.css
+++ b/public/css/home.css
@@ -172,11 +172,12 @@ a {
 
 .section-wrapper .section-card .section-card-content-wrapper .section-card-content-description {
   font-weight: 400;
-  text-overflow: ellipsis;
+  line-height: 1.35;
   overflow: hidden;
 }
 
 .section-wrapper .section-card .section-card-content-wrapper .section-card-content-footer {
+  height: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -213,7 +214,7 @@ a {
 }
 
 footer {
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
   background-color: #24292E;
