--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -14,4 +14,5 @@
             <input type="submit" value="submit">
         </form>
         <div class="signup-create-account">Create a new Accout: <a href="/signup">signup here</a></div>
-    </div> <% include('../includes/footer') %>
+    </div> 
+    <% include('../includes/footer') %>
